# ccusage-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: claude-code-review.yml  claude.yml  release.yml
src/: analytics.rs  block_builder.rs  cli.rs  commands.rs  data_processing.rs  entry_processor.rs  jsonl_parser.rs  main.rs  models.rs  monitor.rs  plan_detector.rs  predictor.rs  pricing.rs  session.rs  table_display.rs
