[package]
name = "cc-usage-rs"
version = "0.1.0"
edition = "2024"
authors = ["snowmead <snowmead@duck.com>"]
description = "Real-time token usage monitor for Claude Code (cc) with cost tracking"
readme = "README.md"
homepage = "https://github.com/snowmead/cc-usage-rs"
repository = "https://github.com/snowmead/cc-usage-rs"
license = "MIT"
keywords = ["claude", "monitoring", "token-usage", "cli", "cost-tracking"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cc-usage-rs"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
crossterm = "0.29"
