[package]
name = "ccusage-rs"
version = "0.2.0"
edition = "2024"
authors = ["snowmead <snowmead@duck.com>"]
description = "Real-time token usage monitor for Claude Code (cc) with cost tracking"
readme = "README.md"
homepage = "https://github.com/snowmead/ccusage-rs"
repository = "https://github.com/snowmead/ccusage-rs"
license = "MIT"
keywords = ["claude", "monitoring", "token-usage", "cli", "cost-tracking"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.{ archive-format }"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[[bin]]
name = "ccusage-rs"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
crossterm = "0.29"
lazy_static = "1.4"
dirs = "6.0"
log = "0.4"
env_logger = "0.11"
regex = "1.0"
rayon = "1.7"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
